--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@firstandthird/toc": "^2.1.0",
     "@iconify/vue": "^4.2.0",
     "@milkdown/core": "^7.5.0",
     "@milkdown/ctx": "^7.5.0",
@@ -38,13 +39,16 @@
     "autoprefixer": "^10.4.20",
     "gsap": "^3.12.5",
     "iconify": "^1.4.0",
+    "import": "^0.0.6",
     "katex": "0.16.21",
     "lodash": "^4.17.21",
     "mermaid": "^11.4.1",
     "pinia": "^3.0.0",
     "pinia-plugin-persistedstate": "^4.1.3",
+    "plyr": "^3.7.8",
     "postcss": "^8.4.49",
     "refractor": "^4.8.1",
+    "remark-directive": "^4.0.0",
     "sass": "^1.83.0",
     "tailwind-scrollbar": "3.1.0",
     "unplugin-auto-import": "^0.18.5",
