--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pinia-plugin-persistedstate": "^4.1.3",
     "plyr": "^3.7.8",
     "postcss": "^8.4.49",
+    "react-dnd-html5-backend": "^16.0.1",
     "refractor": "^4.8.1",
     "remark-directive": "^4.0.0",
     "sass": "^1.83.0",
@@ -54,7 +55,8 @@
     "unplugin-auto-import": "^0.18.5",
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-dnd": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
