--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.4.20",
     "gsap": "^3.12.5",
     "iconify": "^1.4.0",
+    "idb-keyval": "^6.2.2",
     "import": "^0.0.6",
     "katex": "0.16.21",
     "lodash": "^4.17.21",
