--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prosemirror-adapter/vue": "^0.2.6",
     "@vitejs/plugin-legacy": "^5.4.3",
     "animate.css": "^4.1.1",
+    "async-validator": "^4.2.5",
     "autoprefixer": "^10.4.20",
     "gsap": "^3.12.5",
     "iconify": "^1.4.0",
@@ -57,7 +58,7 @@
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue3-dnd": "^2.1.0"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
